--- a/CSharpAutomation.csproj
+++ b/CSharpAutomation.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="EPPlus" Version="7.1.0" />
     <PackageReference Include="IronXL.Excel" Version="2024.3.20" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Selenium.WebDriver" Version="4.19.0" />
 	<PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.*" />
     <PackageReference Include="SpecFlow.NUnit" Version="3.9.74" />
