--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,11 +8,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+
     steps:
+      
+    - uses: actions/checkout@v3
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 5.x
+        dotnet-version: 8.x
 
     - name: Restore
       run: dotnet restore
