--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,4 +25,4 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Run Test API
-      run: dotnet test --configuration Release --filter "Category=API"
+      run: dotnet test --configuration Release --filter Category=API
