--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: Create test files
-      run: touch  /home/runner/work/CSharpAutomation/CSharpAutomation/bin/Debug/netcoreapp8/CREDENTIALS.xlsx
+      run: echo "mock content" > /home/runner/work/CSharpAutomation/CSharpAutomation/bin/Debug/netcoreapp8/CREDENTIALS.xlsx
 
     - name: Run Test API
       run: dotnet test --configuration Release --filter Category=API
