--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -28,10 +28,10 @@ jobs:
       run: ls -a
 
     - name: Debug folder
-      run: ls /bin
+      run: ls /bin/Debug
 
     - name: Create mock files
-      run: echo "mock data" > bin/debug/netcoreapp8/CREDENTIALS.xlsx
+      run: echo "mock data" > /bin/debug/netcoreapp8/CREDENTIALS.xlsx
 
     - name: Run Test API
       run: dotnet test --configuration Release --filter Category=API
