--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,11 +27,8 @@ jobs:
     - name: See files
       run: ls -a
 
-    - name: Debug folder
-      run: ls /bin/Debug
-
     - name: Create mock files
-      run: echo "mock data" > /bin/debug/netcoreapp8/CREDENTIALS.xlsx
+      run: echo "mock data" > /bin/CREDENTIALS.xlsx
 
     - name: Run Test API
       run: dotnet test --configuration Release --filter Category=API
