--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,5 +24,9 @@ jobs:
     - name: Build Project
       run: dotnet build --configuration Release
 
-    - name: Run Test API
+    - name: Run Specific Test Case "API"
       run: dotnet test --configuration Release --filter Category=API
+
+    - name: Run all Test Cases
+      run: dotnet test 
+      
